--- a/vte-rs/vte-sys-rs/Gir.toml
+++ b/vte-rs/vte-sys-rs/Gir.toml
@@ -3,14 +3,12 @@ library = "Vte"
 version = "2.91"
 target_path = "."
 work_mode = "sys"
-girs_dir = "../gir-files/"
+girs_directories = ["../gir-files/"]
 
 external_libraries = [
     "Gtk",
     "GLib",
-    "GObject",
     "Gio",
-    "Atk",
     "Gdk",
     "Pango",
 ]
