--- a/vte-rs/vte-sys-rs/Cargo.toml
+++ b/vte-rs/vte-sys-rs/Cargo.toml
@@ -6,38 +6,63 @@ license = "MIT"
 links = "vte"
 name = "vte-sys"
 version = "0.2.2"
+edition = "2018"
 [package.metadata.docs.rs]
 features = ["dox"]
 [package.metadata.system-deps.vte_2_91]
 name = "vte-2.91"
 version = "0.0"
 
-[package.metadata.system-deps.vte_2_91.feature-versions]
-v0_40 = "0.40"
-v0_42 = "0.42"
-v0_44 = "0.44"
-v0_46 = "0.46"
-v0_48 = "0.48"
-v0_50 = "0.50"
-v0_52 = "0.52"
-v0_54 = "0.54"
-v0_56 = "0.56"
-v0_58 = "0.58"
+[package.metadata.system-deps.vte_2_91.v0_40]
+version = "0.40"
+
+[package.metadata.system-deps.vte_2_91.v0_42]
+version = "0.42"
+
+[package.metadata.system-deps.vte_2_91.v0_44]
+version = "0.44"
+
+[package.metadata.system-deps.vte_2_91.v0_46]
+version = "0.46"
+
+[package.metadata.system-deps.vte_2_91.v0_48]
+version = "0.48"
+
+[package.metadata.system-deps.vte_2_91.v0_50]
+version = "0.50"
+
+[package.metadata.system-deps.vte_2_91.v0_52]
+version = "0.52"
+
+[package.metadata.system-deps.vte_2_91.v0_54]
+version = "0.54"
+
+[package.metadata.system-deps.vte_2_91.v0_56]
+version = "0.56"
+
+[package.metadata.system-deps.vte_2_91.v0_58]
+version = "0.58"
+
+[package.metadata.system-deps.vte_2_91.v0_60]
+version = "0.60"
+
+[package.metadata.system-deps.vte_2_91.v0_62]
+version = "0.62"
 
 [build-dependencies]
 pkg-config = "0.3.18"
-system-deps = "1.3"
+system-deps = "3"
 
 [dependencies]
 bitflags = "1.2.1"
 libc = "0.2"
-atk-sys = "0.10.0"
-gdk-sys = "0.10.0"
-gio-sys = "0.10.0"
-glib-sys = "0.10.0"
-gobject-sys = "0.10.0"
-gtk-sys = "0.10.0"
-pango-sys = "0.10.0"
+atk-sys = "0.14.0"
+gdk-sys = "0.14.0"
+gio-sys = "0.14.0"
+glib-sys = "0.14.0"
+gobject-sys = "0.14.0"
+gtk-sys = "0.14.0"
+pango-sys = "0.14.0"
 
 [features]
 v0_40 = []
@@ -51,6 +76,8 @@ v0_54 = ["v0_52"]
 v0_56 = ["v0_54"]
 dox = []
 v0_58 = ["v0_56"]
+v0_60 = ["v0_58"]
+v0_62 = ["v0_60"]
 
 [lib]
 name = "vte_sys"
